# inkform

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/inkform-core/: Cargo.toml
crates/inkform-core/examples/: dump_preview_svg.rs  inspect_sample.rs  write_validation_font.rs
crates/inkform-core/src/: base_font.rs  domain.rs  error.rs  extraction.rs  generation.rs  glyph_grammar.rs  lib.rs  preview.rs  reference_bank.rs  ttf.rs  validation.rs
crates/inkform-wasm/: Cargo.toml
crates/inkform-wasm/src/: lib.rs
frontend/: .env.example  eslint.config.mjs  next-env.d.ts  package-lock.json  package.json
frontend/public/wasm/: .gitignore  inkform_wasm_bg.wasm
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/dev/local-preview-svg/: route.ts
frontend/src/app/api/dev/local-sample/: route.ts
frontend/src/app/debug/local-sample/: page.tsx
frontend/src/app/generate/: page.tsx
frontend/src/app/results/: page.tsx
frontend/src/app/template/: page.tsx
frontend/src/components/: generator-workbench.tsx  status-card.tsx  template-download.tsx  theme-toggle.tsx
frontend/src/lib/: browser-font-preview.ts  demo-engine.ts  engine-types.ts  inkform-engine.ts  script-pack.ts
frontend/src/types/: inkform-wasm.d.ts
scripts/: build-wasm.sh  check.sh  dev-frontend.sh
